# bot

./: .dockerignore  .flake8  .gitignore  .replit  CONTRIBUTING.md  Dockerfile  README.md  catcord.json  config-default.yml  config.yml  docker-compose.yml  pyproject.toml  replit-deploy.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: actions_embed.yml  deploy.yml  flake8.yml  lint.yml
bot/: __main__.py  bot.py  config.py  config.yml  constants.py
bot/database/: database.py  init.sql  models.py
bot/database/crud/: infractions.py  quotes.py
bot/exts/: moderation.py
bot/exts/fun/: catify,py  catify.py  fun.py  makeembed.py  zencat.py
bot/exts/moderation/: ban.py  bans.py  moderation.py  purge.py
bot/exts/utilities/: extensions.py  help.py  pypi.py  quote.py  timeconvert.py
bot/resources/: quote.json
bot/resources/eval/: poplangs.yml  syntaxexts.yml  wrapping.yml
bot/utilities/: __init__.py  tio.py
postgres/: init.sql
