[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["cat"]
description = ""
name = "bot"
version = "0.1.0"
[tool.poetry.dependencies]
PyYAML = "^5.4.1"
datetime = "^4.3"
"discord.py" = "^1.7.1"
loguru = "^0.5.3"
python = "^3.8"
python-dotenv = "^0.17.0"
pytz = "^2021.1"
utils = "^1.0.1"
[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^5.2"
